<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_to_test"
        android:icon="@mipmap/ic_invert_colors"
        android:orderInCategory="100"
        android:title="@string/test" />
    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_palette"
        android:orderInCategory="100"
        android:title="@string/palette" />
    <item
        android:id="@+id/action_coordinatorLayout"
        android:orderInCategory="100"
        android:title="@string/coordinatorlayout" />

</menu>
